--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gluten:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Yrsa:wght@300&display=swap');
+/*audio Section*/
+audio{
+  z-index: 100;
+}
 /*Profile*/
 .home{
     background: url(../images/Home\ page.png);
@@ -86,6 +90,17 @@
     left: 30%;
     bottom: 5%;
     box-shadow: 0 0 50px -10px #DB00FF;
+    z-index: 100;
+}
+.homebox{
+    height:78px;
+    width: 165px;
+    background: linear-gradient(to top,rgba(221, 0, 255, 0.445),rgba(113, 18, 110, 0.335),rgba(187, 0, 180, 0));
+    position: absolute;
+    bottom:20px;
+    left: -30px;
+    z-index: -1;
+    
 }
 .navbar{
     position: absolute;
@@ -93,14 +108,14 @@
     left: 30px;
 }
 .navlink0{
-    color: #DB00FF;
+    color: white;
     margin: 20px;
     font-family: 'Gluten', cursive;
     font-size: 24px;
     margin-left: 25px;
 }
 .navlink0:hover{
-    color: #DB00FF;
+    color: white;
 }
 .navlink{
     color: white;
@@ -282,3 +297,25 @@ h5{
     cursor: pointer;
 }
 
+/*volume*/
+video{
+    display: none;
+}
+.fa-col{
+    color: white;
+    position: absolute;
+    z-index: 100;
+    cursor: pointer;
+    left: 60px;
+    bottom: 300px;
+    
+    padding: 10px;
+}
+
+/*model*/
+#container3D canvas {
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+}
